<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    android:id="@+id/popup_bug_report">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="2dp"
        android:layout_margin="4dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/cancel_search"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="30dp"
                    android:src="?attr/homeAsUpIndicator"
                    android:layout_gravity="center|start"
                    android:clickable="true"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="match_parent"
                    android:text="@string/error_report"
                    android:gravity="center|left"
                    android:textSize="20sp"/>

                <ImageView
                    android:id="@+id/to_feedback"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="30dp"
                    android:src="@drawable/send"
                    android:layout_gravity="end|center"
                    android:layout_margin="8dp"
                    android:clickable="true"/>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">
                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:nextFocusForward="@+id/et_theme"
                    android:textSize="@dimen/text_size_medium"
                    android:hint="@string/email" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">
                <EditText
                    android:id="@+id/et_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size_medium"
                    android:hint="@string/bug_theme" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content"
                android:layout_margin="8dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@drawable/bg_output"
                android:layout_margin="4dp"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>